--- a/_drafts/2020-08-05-iOS_SDK.md
+++ b/_drafts/2020-08-05-iOS_SDK.md
@@ -31,12 +31,12 @@ mermaid: true
 
   * 熟悉相关硬件产品的功能和使用
 
-  * 使用SiWiFi Openwrt SDK完成产品固件的调试  [快速入门](https://siflower.github.io/2020/08/05/quick_start/)
-  
+  * 使用SiWiFi Openwrt SDK完成产品固件的调试  [快速入门](https://bingchun.github.io/2020/08/05/quick_start/)
+
   * 注册 在[矽昌开放平台](https://open.siflower.cn/) 注册Siflower产品服务。 取得AppKey，AppSecret和productKey
 
   * 了解iOS App开发、上线等一系列流程
- 
+
 ## SDK提供功能
 
 通过SDK提供的API实现对矽昌路由器、AC控制器智能产品在局域网和远程状态下的控制，如：
@@ -58,9 +58,9 @@ mermaid: true
 在[矽昌开放平台](https://open.siflower.cn/) 注册产品，获取AppKey，AppSecret和productKey。
 其中:
 
-* AppKey和AppSecret 参考《 [矽昌开放平台用户手册](https://siflower.github.io/2020/09/12/open_platform_user_guide/) 》5.4.3 APP产品参数 章节描述。
+* AppKey和AppSecret 参考《 [矽昌开放平台用户手册](https://bingchun.github.io/2020/09/12/open_platform_user_guide/) 》5.4.3 APP产品参数 章节描述。
 
-* productKey 参考《 [矽昌开放平台用户手册](https://siflower.github.io/2020/09/12/open_platform_user_guide/) 》5.4.1 硬件产品参数 章节描述。
+* productKey 参考《 [矽昌开放平台用户手册](https://bingchun.github.io/2020/09/12/open_platform_user_guide/) 》5.4.1 硬件产品参数 章节描述。
 
 ![create_products](/assets/images/iOS-SDK-UserGuide/ios-sdk-create-product.png)
 
@@ -71,7 +71,7 @@ SDK包包含：SiRouterApi.framwork文件
 # iOS SDK集成步骤
 
 1. 将资源包和类库导入工程中，由于是动态库,需要在Embed Frameworks(没有则手动添加)中手动加入.framework库，否则崩溃报image not found错
-   
+
 ![set_framework](/assets/images/iOS-SDK-UserGuide/ios-sdk-framework.png)
 
 2. Build Setting -> vaild Architecture ->添加arm64,armv7s
@@ -130,7 +130,7 @@ NSString *appkey = @"c20ad4d76fe97759aa27a0c99bff6710";
 
 ## SDK 用户注册
 
-| 属性 | 类型 | 说明 | 
+| 属性 | 类型 | 说明 |
 | ------- | :------ | :----- |
 | appKey | String | 区分应用的唯一键 |
 | secretKey | String | 后台 app secret |
@@ -156,7 +156,7 @@ NSString *appkey = @"c20ad4d76fe97759aa27a0c99bff6710";
 
 ## SDK 用户登录
 
-| 属性 | 类型 | 说明 | 
+| 属性 | 类型 | 说明 |
 | ------- | :------ | :----- |
 | loginKey | String | 用户登录账号 |
 | appKey | String | 区分应用的唯一键 |
@@ -169,7 +169,7 @@ NSString *appkey = @"c20ad4d76fe97759aa27a0c99bff6710";
            //登录成功操作
         }else{
           //登录失败操作
-        }    
+        }
     }];
 
 ```
@@ -182,7 +182,7 @@ NSString *appkey = @"c20ad4d76fe97759aa27a0c99bff6710";
 
 ```
 [manager initLocalApi:^(id ret) {
-        NSLog(@"initlocalapi");   
+        NSLog(@"initlocalapi");
     } error:^(int code, NSString *msg) {
         NSLog(@"initlocalapi----%d,%@",code,msg);
     }];
@@ -283,7 +283,7 @@ NSString *appkey = @"c20ad4d76fe97759aa27a0c99bff6710";
                         [app CheckWiFiStatus];
                         NSLog(@"setCurrentRouter ret ==== %@,code ==== %d",ret,code);
                     }];
-                    
+
                 }else{
                     MyCurrentRouter = nil;
                     manager.mLocalnetWorking = 0;
@@ -351,7 +351,7 @@ demo程序提供了以下功能：
 
 ### (3) 路由器与siflower服务连接测试
 
-[参照路由器siflower服务文档](#todo)  
+[参照路由器siflower服务文档](#todo)
 
 如连接失败，则需要确认路由器是否能正常访问internet。
 
@@ -383,7 +383,7 @@ demo程序提供了以下功能：
 
 ### (2) 路由器接口测试
 
-参照[SiWiFi接口测试手册](https://siflower.github.io/2020/09/11/SiWiFi_interface_test/)
+参照[SiWiFi接口测试手册](https://bingchun.github.io/2020/09/11/SiWiFi_interface_test/)
 
 
 若接口调用失败,可根据返回的错误信息,检查:
