--- a/_posts/blog/fix/2021-12-07-a28_faq_guide.md
+++ b/_posts/blog/fix/2021-12-07-a28_faq_guide.md
@@ -3,7 +3,7 @@ layout: post
 title: SF19A2890 FAQ 手册
 categories: CUSTOM
 description: 记录SF19A2890开发过程中的各种FAQ
-keywords:  FAQ 
+keywords:  FAQ
 mermaid: true
 ---
 
@@ -16,7 +16,7 @@ mermaid: true
 ## 代码编译
 
 - **Q：git代码下载不成功，怎么解决？**
-  
+
   A：(1)由于系统环境自带的git缓存buffer较小导致,可以参考buffer修改 来修改本地git缓存
 
      (2)网络状况不好导致，如果下载时下载速度一直在90kb/s以下，会导致下载失败，建议待网络环境良好或者更换下载时间段进行下载，可能仍然需要花长时间下载
@@ -26,17 +26,17 @@ mermaid: true
      (4)使用gitee码云下载
 &emsp;
 - **Q：编译出现图示问题，怎么解决？**
-  
-    ![faq1](/assets/images/faq_img/faq1.png) 
-     
+
+    ![faq1](/assets/images/faq_img/faq1.png)
+
   A：这个是由于编译指令漏了项目名或者项目名错误。具体支持的版型可以查看make.sh脚本代码中的参数选项。 例如编译ac28版型：./make.sh ac28
 
 &emsp;
 - **Q：第一次使用脚本编译出现图示问题，怎么解决？**
 
-     ![faq2](/assets/images/faq_img/faq2.png) 
+     ![faq2](/assets/images/faq_img/faq2.png)
 
-  A：出现图示问题是由于第一次脚本编译，有一些package的依赖没有选上导致编译不通过 
+  A：出现图示问题是由于第一次脚本编译，有一些package的依赖没有选上导致编译不通过
      在这个状态下继续使用
      make -j1 V=s继续编译
      或者make -j4 V=s、 make -j8 V=s，使用多个线程，提高编译速度继续编译
@@ -44,42 +44,42 @@ mermaid: true
 
 &emsp;
 - **Q：脚本编译的项目如何添加？或者如何自己新建编译版型？**
-  
+
   A：因为硬件的不同，编译时需要对版型进行区分选择相应的配置文件
-     参考[新的版型引入指南](https://siflower.github.io/2020/09/08/newBoardImportGuide/)
+     参考[新的版型引入指南](https://bingchun.github.io/2020/09/08/newBoardImportGuide/)
 
 &emsp;
-- **Q：如何判断编译成功？** 
+- **Q：如何判断编译成功？**
 
-  A：出现图示log即为编译成功。编译成功会在/bin/target/siflower/下生成对应的镜像文件  
-     如果使用脚本编译，则会在编译根目录生成带分支名称/版型名称/commit的镜像  
+  A：出现图示log即为编译成功。编译成功会在/bin/target/siflower/下生成对应的镜像文件
+     如果使用脚本编译，则会在编译根目录生成带分支名称/版型名称/commit的镜像
      ![faq3](/assets/images/faq_img/faq3.png)
 
 &emsp;
 - **Q：编译uboot出现下图错误如何解决？**
-  
+
      ![faq4](/assets/images/faq_img/faq4.png)
 
   A：这是由于系统的dtc版本太低导致的，使用sudo apt-get install device-tree-compiler安装更新即可成功编译
 &emsp;
 - **Q：uboot.img和uboot.bin有什么区别？**
-  
+
   A： uboot.img只是比uboot.bin多了个头，而这个头包括了如何/从哪里执行这个uboot. uboot.bin一般是按照具体地址烧写，
       而uboot.img则包含地址等信息，无需按照地址下载，所以这个也决定了uboot.bin适用于Norflash，而uboot.img更适合SD卡。
 
 &emsp;
 - **Q：uboot下的擦除指令？**
-  
+
   A：擦除要区分是nor flash 或者 nand flash (【指令】earse【地址】【长度】)
-   nor flash: 1) sf probe  2) sf erase 0x90000 0x10000 
+   nor flash: 1) sf probe  2) sf erase 0x90000 0x10000
    nand  : 1) spi_nand probe  2)spi_nand erase 0xa0000 0x20000
 &emsp;
 - **Q：uboot烧录失败怎么处理？**
- 
+
   A：uboot烧录失败后无法正常启动，则不能继续通过uboot更新镜像，可通过irom usb下载（如果有USB口），或者摘下flash使用烧录器的方式重新烧录镜像
 &emsp;
 - **Q：为什么一个uboot只能对应一个ddr型号？**
-  
+
   A：因为每个DDR的时序参数不一样，所以必须针对不同的DDR颗粒去做调整。如果选择差不多参数的颗粒，一组参数同时符合多颗DDR，这样同一个uboot就可支持几颗DDR
      目前已有通用的128M_ddr2参数和128M_ddr3参数
 &emsp;
@@ -98,7 +98,7 @@ mermaid: true
 - **Q：板子上电反复出现下图log，是什么原因？**
 
   ![faq5](/assets/images/faq_img/faq5.png)
-  
+
   A: 这是由于FLASH中未烧录任何程序导致的，可以使用FLASH烧录器烧录uboot或者烧录完整的4M/8M/16M的flash镜像。
 
 &emsp;
@@ -108,10 +108,10 @@ mermaid: true
 
   A：1) uboot软件的ddr大小与实际贴片的ddr大小不一致，或者型号不对应。
      2) ddr未贴好或者ddr物料损坏。
-     3) uboot编译有问题 
+     3) uboot编译有问题
 &emsp;
 - **Q：启动过程出现下图log,无法正常启动，会是什么原因导致的？**
-  
+
   ![faq7](/assets/images/faq_img/faq7.png)
 
   A：1) FLASH型号无法识别出大小，导致不能正常启动，或者烧录镜像超过FLASH大小。
@@ -120,8 +120,8 @@ mermaid: true
 
 &emsp;
 - **Q：目前方案flash分区是什么样的？在哪里可以查看**
-  A：分区配置在linux-4.14.90-dev/linux-4.14.90/arch/mips/boot/dts/siflower/版型.dts中可以查看  
-	   以16M方案为例，具体分配如下  
+  A：分区配置在linux-4.14.90-dev/linux-4.14.90/arch/mips/boot/dts/siflower/版型.dts中可以查看
+	   以16M方案为例，具体分配如下
 
     ![faq8](/assets/images/faq_img/faq8.png)
 &emsp;
@@ -130,37 +130,37 @@ mermaid: true
      例如：修改romtype ```printf “\x22\x00\x00\x00”| dd of=/dev/mtdblock3 bs=1 count=4 seek=161``
 
      例如：修改macaddr ```printf "\xa8\x5a\xf3\x00\x14\x6e"| dd of=/dev/mtdblock3 bs=1 count=6 seek=0```
-     
+
      例如：s手动写PCBT ```printf "PCBT"| dd of=/dev/mtdblock3 bs=1 count=4 seek=23```
 
      参数说明 bs固定为1 count为写入值的大小 seek是偏移量(参考flash分区说明)，任何一个参数重新写入后需要重新启动机器才会生效。
 
-     分区具体参考[FLASH分区开发手册](https://siflower.github.io/2020/09/08/flashPartitionGuide/) 
+     分区具体参考[FLASH分区开发手册](https://bingchun.github.io/2020/09/08/flashPartitionGuide/)
 
 ## WIFI
 &emsp;
 - **Q：目前wifi是否支持b/g/n和a/n/ac混合模式？**
   A：支持
-	   2.4Gwifi   
-	   在/etc/config/wireless中config wifi-device 'radio0'下配置：  
-	   11b：hwmode配置为11b，删除htmode  
-	   11g（实际为b/g mixed）：hwmode配置为11g，删除htmode  
-	   11n（实际为b/g/n mixed）：hwmode配置为11g，htmode有值（频段带宽配置为自动：htmode=HT40，ht_coex=1；配置为40/20MHZ：htmode=HT40/HT20）  
-	   (ht_coex为2.4G 20/40MHZ自动切换的配置，仅在2.4G频段带宽为自动时配置为1，其余情况配置为0或删除)  
+	   2.4Gwifi
+	   在/etc/config/wireless中config wifi-device 'radio0'下配置：
+	   11b：hwmode配置为11b，删除htmode
+	   11g（实际为b/g mixed）：hwmode配置为11g，删除htmode
+	   11n（实际为b/g/n mixed）：hwmode配置为11g，htmode有值（频段带宽配置为自动：htmode=HT40，ht_coex=1；配置为40/20MHZ：htmode=HT40/HT20）
+	   (ht_coex为2.4G 20/40MHZ自动切换的配置，仅在2.4G频段带宽为自动时配置为1，其余情况配置为0或删除)
 
-	   5Gwifi：  
-	   在/etc/config/wireless中config wifi-device 'radio1'下配置：  
-	   hwmode配置均为11a  
-	   11a：删除htmode  
-	   11n：htmode配置为HT20或HT40  
-	   11ac：htmode配置为VHT20，VHT40或VHT80  
+	   5Gwifi：
+	   在/etc/config/wireless中config wifi-device 'radio1'下配置：
+	   hwmode配置均为11a
+	   11a：删除htmode
+	   11n：htmode配置为HT20或HT40
+	   11ac：htmode配置为VHT20，VHT40或VHT80
 
 &emsp;
 - **Q：串口频繁打印如下log，是什么问题**
-  
+
   ![faq9](/assets/images/faq_img/faq9.png)
 
-  A：日志有大量 RIU_IRQMACCCATIMEOUTMASKED_BIT 
+  A：日志有大量 RIU_IRQMACCCATIMEOUTMASKED_BIT
  	   反映出来rx一直检测到能量，需要检查一下环境，有两种可能。
 	   1、周围有大的干扰，排查干扰源，比如有ate测试在跑。
 	   2、板子线路上有问题，比如天线焊接短路了等。
@@ -192,20 +192,20 @@ mermaid: true
   A：修改代码里对应的package/kernel/mac80211/files/lib/wifi/mac80211.sh脚本里的相关参数
 &emsp;
 - **Q：WiFi如何固定发射速率？**
-  A：跑信令仪器的时候需要固定发射速率，否则速率会根据速率调整算法变化。  
-     以5G的80M带宽mcs9为例，步骤如下  
-     1、上电后， 执行```echo 1 > /sys/kernel/debug/ieee80211/phy1/siwifi/enable_rc```  
-     2、仪器连接上5G  
-     3、执行如下命令固定速率到80M/mcs9-sgi (301为mcs9-sgi的index值)  
-     ```echo 301  > /sys/kernel/debug/ieee80211/phy3/siwifi/rc/终端mac地址/fixed_rate_idx```  
+  A：跑信令仪器的时候需要固定发射速率，否则速率会根据速率调整算法变化。
+     以5G的80M带宽mcs9为例，步骤如下
+     1、上电后， 执行```echo 1 > /sys/kernel/debug/ieee80211/phy1/siwifi/enable_rc```
+     2、仪器连接上5G
+     3、执行如下命令固定速率到80M/mcs9-sgi (301为mcs9-sgi的index值)
+     ```echo 301  > /sys/kernel/debug/ieee80211/phy3/siwifi/rc/终端mac地址/fixed_rate_idx```
 
-     ![faq10](/assets/images/faq_img/faq10.png)  
-     
+     ![faq10](/assets/images/faq_img/faq10.png)
+
      4、跑信令测试。
 
 &emsp;
 - **Q：如何编译外置PA/内置PA镜像？**
-  A：1)修改openwrt目录.config 
+  A：1)修改openwrt目录.config
 	     关闭2.4g外置PA，CONFIG_PACKAGE_SFUMAC_LB_EXT_PA_SUPPORT=y不选
        关闭5g外置PA，CONFIG_PACKAGE_SFUMAC_HB_EXT_PA_SUPPORT=y不选
      2)去掉对应版型dts如下配置
@@ -215,7 +215,7 @@ mermaid: true
 &emsp;
 - **Q：软件LAN WAN划分如何实现的？**
   A: 编译镜像前在/openwrt-18.06 /target/linux/siflower/sf19a28-fullmask/base-files-SF19A28-版型/etc/board.d路径下修改 01_network 文件中完成划分
-     参考文档[有线网络和服务介绍](https://siflower.github.io/2020/09/08/ethernetGuide/)  
+     参考文档[有线网络和服务介绍](https://bingchun.github.io/2020/09/08/ethernetGuide/)
 
 &emsp;
 - **Q：当板子启动初始化之后，网口数据tx/rx不通时如何处理？**
@@ -230,7 +230,7 @@ mermaid: true
   A：支持。
     Vlan本身是数据包多了一段数据，使用openwrt标准配置去按照你们需求处理，处理特定的tag，在协议栈自己创建对应的vlan interface处理即可。
 	  network里vlan网络端口配置
-	
+
     ![faq11](/assets/images/faq_img/faq11.png)
 
 	  option vlan 表示对应vlan id
@@ -256,11 +256,11 @@ mermaid: true
 
 &emsp;
 - **Q：为什么以太网测试lan-lan双向能到1800Mbps+，lan-wan双向只能到900Mbps+？**
-  A： 因为我们方案是rgmii接口接的switch ,故跑lan-lan双向 , lan-wan双向结果会有不同  
-      跑lan-wan时：  
-      对于我们cpu来说 wan rx ， lan rx 共享1G带宽，wan tx lan tx 共享1G带宽，故总和不会超过1G ,所以lan-wan双向900Mbps+是正常的  
-	    跑lan-lan时：  
-	    可以理解为在switch芯片内部打流，故lan1/lan2 tx/rx都是独享1G带宽，故总和会在1800Mbps+  
+  A： 因为我们方案是rgmii接口接的switch ,故跑lan-lan双向 , lan-wan双向结果会有不同
+      跑lan-wan时：
+      对于我们cpu来说 wan rx ， lan rx 共享1G带宽，wan tx lan tx 共享1G带宽，故总和不会超过1G ,所以lan-wan双向900Mbps+是正常的
+	    跑lan-lan时：
+	    可以理解为在switch芯片内部打流，故lan1/lan2 tx/rx都是独享1G带宽，故总和会在1800Mbps+
 
 &emsp;
 - **Q：比如qos，黑白名单这些规则是通过netfilter，tc实现的还是芯片实现？调用驱动接口还是iptables？**
@@ -282,7 +282,7 @@ mermaid: true
 
 &emsp;
 - **Q：系统下/etc/config/目录下各个配置文件的作用是什么？**
-  A：参考[config文件配置手册](https://siflower.github.io/2020/09/11/config_setting/)
+  A：参考[config文件配置手册](https://bingchun.github.io/2020/09/11/config_setting/)
 
 &emsp;
 - **Q：编译镜像页面默认英文，如何修改？**
@@ -290,11 +290,11 @@ mermaid: true
 
 &emsp;
 - **Q：修改网页接口出错导致网页报错打不开怎么办？**
-  A：当接口出错时，调用该接口时会网页会得到相关错误信息，其中会提示哪个文件的哪一行出了问题。通过串口工具（或ssh）打开提示路径下出错的lua文件。先根据错误提示修改有误的地方，然后执行指令rm -rf /tmp/luci*，再重新进入网页即可。 
+  A：当接口出错时，调用该接口时会网页会得到相关错误信息，其中会提示哪个文件的哪一行出了问题。通过串口工具（或ssh）打开提示路径下出错的lua文件。先根据错误提示修改有误的地方，然后执行指令rm -rf /tmp/luci*，再重新进入网页即可。
 
 &emsp;
 - **Q：使用nand flash的产品uboot和openwrt该如何编译？**
-  A：	参考[SPI Nand Flash物料调试指南](https://siflower.github.io/2021/09/23/spi_nand_flash/#spi-nand-flash%E7%89%A9%E6%96%99%E8%B0%83%E8%AF%95%E6%8C%87%E5%8D%97)
+  A：	参考[SPI Nand Flash物料调试指南](https://bingchun.github.io/2021/09/23/spi_nand_flash/#spi-nand-flash%E7%89%A9%E6%96%99%E8%B0%83%E8%AF%95%E6%8C%87%E5%8D%97)
 
 &emsp;
 - **Q：如何修改串口波特率？**
@@ -320,65 +320,65 @@ mermaid: true
 - **Q：矽昌mac地址使用和分配规则是怎么样的？**
   A：siflower 方案mac地址使用情况如下，所有的mac使用的地址都是以一个基础的mac地址往后增加9从而得到十个mac地址供系统使用。
 
-     wifi所用的起始mac地址可以通过factory分区查看:  
-     2.4G  ```cat  /sys/devices/platform/factory-read/macaddr_lb```  
-     5G    ```cat  /sys/devices/platform/factory-read/macaddr_hb```  
+     wifi所用的起始mac地址可以通过factory分区查看:
+     2.4G  ```cat  /sys/devices/platform/factory-read/macaddr_lb```
+     5G    ```cat  /sys/devices/platform/factory-read/macaddr_hb```
 
-     每个WiFi会各用到4个mac地址  
-     以A8:5A:F3:09:80:1C 这个mac地址为举例，板子起来后通过命令读取  
-     macaddr_lb : A8:5A:F3:09:80:1C  
-     macaddr_hb : A8:5A:F3:09:80:20  
-     所以2.4G 用到的mac地址为 A8:5A:F3:09:80:1C~ A8:5A:F3:09:80:1F  
-     第一个80:1C使用作为2.4G ssid名称，可以通过ifconfig查看到  
-     第四个80:1F即为2.4G的实际mac地址。  
-     第二个80:1D用作租赁网络2.4G的mac地址   
-     第三个80:1E用作访客网络2.4G的mac地址  
+     每个WiFi会各用到4个mac地址
+     以A8:5A:F3:09:80:1C 这个mac地址为举例，板子起来后通过命令读取
+     macaddr_lb : A8:5A:F3:09:80:1C
+     macaddr_hb : A8:5A:F3:09:80:20
+     所以2.4G 用到的mac地址为 A8:5A:F3:09:80:1C~ A8:5A:F3:09:80:1F
+     第一个80:1C使用作为2.4G ssid名称，可以通过ifconfig查看到
+     第四个80:1F即为2.4G的实际mac地址。
+     第二个80:1D用作租赁网络2.4G的mac地址
+     第三个80:1E用作访客网络2.4G的mac地址
 
-     5G用到的mac地址为 A8:5A:F3:09:80:20~ A8:5A:F3:09:80:23  
-     第一个80:20使用作为5G ssid名称  
-     第四个80:23即为5G的实际mac地址，可以通过ifconfig查看到  
-     第二个80:21用作租赁网络5G的mac地址  
-     第三个80:22用作访客网络5G的mac地址  
+     5G用到的mac地址为 A8:5A:F3:09:80:20~ A8:5A:F3:09:80:23
+     第一个80:20使用作为5G ssid名称
+     第四个80:23即为5G的实际mac地址，可以通过ifconfig查看到
+     第二个80:21用作租赁网络5G的mac地址
+     第三个80:22用作访客网络5G的mac地址
 
      所以WiFi的mac地址查询：
-     ```cat  /sys/devices/platform/factory-read/macaddr_lb```的值+3即为 2.4G的mac地址  
-     ```cat  /sys/devices/platform/factory-read/macaddr_hb```的值+3即为  5G的mac地址  
+     ```cat  /sys/devices/platform/factory-read/macaddr_lb```的值+3即为 2.4G的mac地址
+     ```cat  /sys/devices/platform/factory-read/macaddr_hb```的值+3即为  5G的mac地址
 
-     修改初始的mac地址，即macaddr0  
-     指令 :  
-     ```printf “\xa8\x5a\xf3\xff\x12\x7a”| dd of=/dev/mtdblock3 bs=1 count=6 seek=0```  
-     引号中为要修改的mac地址，修改后重新上电才会生效  
+     修改初始的mac地址，即macaddr0
+     指令 :
+     ```printf “\xa8\x5a\xf3\xff\x12\x7a”| dd of=/dev/mtdblock3 bs=1 count=6 seek=0```
+     引号中为要修改的mac地址，修改后重新上电才会生效
      重启后系统WiFi，lan，wan用到的mac地址会使用这个修改的mac地址按照上述的计算方法通过驱动来统一计算分配。
 
 &emsp;
 - **Q：为什么wifi灯通过节点方式控制不了？需要如何控制？**
-  A：wifi的灯并不是控制不了，而是当前在sys/class/leds下的节点是wifi驱动注册实现的，四个节点分别检测节点名称对应的phy的数据包，有数据就闪一下。修改单独一个节点就可能会出现无法控制或常亮的情况。  
-     如果实在要控制，可以尝试以下步骤：  
-     1、分别对4个节点echo none > /sys/class/les/phy0rx/trigger，取消phy数据包的触发源  
-     2、将所有节点的brightness置为1(echo 1 > sys/class/leds/phy1rx/brightness)，此时灯灭了。  
-     3、将其中一个节点的brightness置为0，灯就亮了。  
-     此时就可以通过控制一个节点的brightness控制led灯。若要恢复则重新echo触发源到4个节点并且brightness配置回默认值或者重启即可。  
+  A：wifi的灯并不是控制不了，而是当前在sys/class/leds下的节点是wifi驱动注册实现的，四个节点分别检测节点名称对应的phy的数据包，有数据就闪一下。修改单独一个节点就可能会出现无法控制或常亮的情况。
+     如果实在要控制，可以尝试以下步骤：
+     1、分别对4个节点echo none > /sys/class/les/phy0rx/trigger，取消phy数据包的触发源
+     2、将所有节点的brightness置为1(echo 1 > sys/class/leds/phy1rx/brightness)，此时灯灭了。
+     3、将其中一个节点的brightness置为0，灯就亮了。
+     此时就可以通过控制一个节点的brightness控制led灯。若要恢复则重新echo触发源到4个节点并且brightness配置回默认值或者重启即可。
 
-     如果完全不需要wifi驱动控制的这一套led触发机制，可以：  
-     1、将package/kernel/sf_smac/Makefile中的LED config注掉。  
-     2、将dts中wifi的gpio删去  
-     3、按照文档[[GPIO综合使用手册](https://siflower.github.io/2020/07/30/gpio_guide/) ，添加一套自己的led节点（记得gpio口要配置正确，可参考之前删去的wifi的gpio）  
-     4、在make kernel_menuconfig中Device Drivers-->LED_Support中确认已支持led gpio，并记得添加trigger，常用的有timer、default-on等  
-     5、完成以上步骤后，sys/class/leds下就会出现一个自己注册的节点，控制这个wifi灯。此时echo指令到trigger节点已能很方便地控制led  
+     如果完全不需要wifi驱动控制的这一套led触发机制，可以：
+     1、将package/kernel/sf_smac/Makefile中的LED config注掉。
+     2、将dts中wifi的gpio删去
+     3、按照文档[[GPIO综合使用手册](https://bingchun.github.io/2020/07/30/gpio_guide/) ，添加一套自己的led节点（记得gpio口要配置正确，可参考之前删去的wifi的gpio）
+     4、在make kernel_menuconfig中Device Drivers-->LED_Support中确认已支持led gpio，并记得添加trigger，常用的有timer、default-on等
+     5、完成以上步骤后，sys/class/leds下就会出现一个自己注册的节点，控制这个wifi灯。此时echo指令到trigger节点已能很方便地控制led
 
-     若还想要实现更方便或更复杂的闪灯逻辑，可以参考文档中的“使用led-button package进行管理”，对需要的动作进行自行适配。  
-     如果开发完成（假设行为编号为20），运行指令 /bin/led-button -l 20，就可以让led实现20对应的行为。  
+     若还想要实现更方便或更复杂的闪灯逻辑，可以参考文档中的“使用led-button package进行管理”，对需要的动作进行自行适配。
+     如果开发完成（假设行为编号为20），运行指令 /bin/led-button -l 20，就可以让led实现20对应的行为。
 
 
 ## 测试问题
 
 &emsp;
 - **Q：siflower性能如何测试？有无指导文档？**
-  A：性能测试说明及方案参考https://siflower.github.io/2020/11/30/siflower_throughput_guide/
+  A：性能测试说明及方案参考https://bingchun.github.io/2020/11/30/siflower_throughput_guide/
 
 &emsp;
 - **Q：射频性能标定相关说明文档？**
-  A：射频性能测试参考https://siflower.github.io/2020/12/01/siflower_ate_test_guide/
+  A：射频性能测试参考https://bingchun.github.io/2020/12/01/siflower_ate_test_guide/
 
 &emsp;
 - **Q：WIFI吞吐量测试常见问题解决？**
@@ -386,7 +386,7 @@ mermaid: true
     ·检查网卡是否支持1200M
     ·移动设备调整路由与网卡天线的位置
     ·检查天线有无松动或者损坏
-    ·是否屏蔽箱信号反射太强，需要增加衰减器		
+    ·是否屏蔽箱信号反射太强，需要增加衰减器
     ·如果使用的天线是客户自己的，更换我们的天线进行测试
     ·确认配测网卡型号以及驱动版本是否需要更新
 
@@ -436,7 +436,7 @@ mermaid: true
 
     5) 接收灵敏度测试值比标准数据差
     ·是否进行XO校准，检查XO值是否写入
-    ·接收测试时RX波形选择是否正确	
+    ·接收测试时RX波形选择是否正确
     ·检查测试环境，线材是否有损耗
     ·硬件问题，检测RF电路是否存在问题影响接收性能
 
