--- a/_posts/roadmap/2020-07-17-A28_roadmap.md
+++ b/_posts/roadmap/2020-07-17-A28_roadmap.md
@@ -38,7 +38,7 @@ SDK 文档通过github.io 进行发布。
 - SYSTEM
 - WIFI
 
-文档相关人员参见 [SF19A2890 SDK使用指南](https://siflower.github.io/2020/07/22/A28_SDK_guide/)
+文档相关人员参见 [SF19A2890 SDK使用指南](https://bingchun.github.io/2020/07/22/A28_SDK_guide/)
 
 ## 系统SDK 开发计划
 
@@ -54,7 +54,7 @@ SDK 文档通过github.io 进行发布。
 功能开发
 - [x]  WAN/LAN自适应
 - [ ]  一键中继
-- [ ]  Easymesh  
+- [ ]  Easymesh
 - [ ]  组播硬件加速
 - [ ]  中继器应用
 - [ ]  AC/AP应用
